--- a/applet/build.gradle
+++ b/applet/build.gradle
@@ -17,6 +17,7 @@ buildscript {
 
 apply plugin: 'com.klinec.gradle.javacard'
 apply plugin: 'idea'
+apply plugin: 'application'
 sourceCompatibility = 1.8
 
 // Common settings, definitions
@@ -30,7 +31,6 @@ repositories {
     // mavenLocal() // for local maven repository if needed
 
     // Repository with JCardSim, Globalplatform, etc, ...
-    maven { url  "https://dl.bintray.com/ph4r05/jcard" }
     maven { url "https://javacard.pro/maven" }
     maven { url "https://deadcode.me/mvn" }
 
@@ -44,11 +44,13 @@ repositories {
 dependencies {
     jcardsim 'com.klinec:jcardsim:3.0.5.11'
 
+    implementation 'com.klinec:jcardsim:3.0.5.11'
+
     testImplementation 'org.testng:testng:6.1.1'
-    testImplementation 'org.slf4j:slf4j-api:1.7.2'
-    testImplementation 'org.slf4j:slf4j-log4j12:1.7.2'
-    testImplementation 'org.apache.logging.log4j:log4j-core:2.11.2'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.slf4j:slf4j-api:1.7.33'
+    testImplementation 'org.slf4j:slf4j-log4j12:1.7.33'
+    testImplementation 'org.apache.logging.log4j:log4j-core:2.17.0'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.1.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.1.1'
 
@@ -70,6 +72,10 @@ task dumpClassPath(dependsOn: ['idea']) {
                 .grep(~/.*"jar:.*/).collect { it.split("[\\/]")[-3].trim() }.join("\n- ")
         println "-------\n"
     }
+}
+
+application {
+    mainClass = 'main.Run'
 }
 
 test {
@@ -123,7 +129,9 @@ javacard {
             packageName 'applet'
             version '0.1'
             aid '01:ff:ff:04:05:06:07:08:09'
-            output 'applet.cap'
+            output 'applet_main_applet.cap'
+
+	        sources 'src/main/java/applet'
 
             // JC310b43 supports compilation targeting for lower API versions.
             // Here you can specify path to the SDK you want to use.
